--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ resolver = "2"
 members = [""]
 
 [workspace.dependencies]
-bevy = { version = "0.14.2", features = ["file_watcher", "dynamic_linking"] }
+bevy = { version = "0.14.2", features = ["file_watcher"] }
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
