--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
+blender_plugin = { workspace = true }
+
 bevy = { workspace = true }
 # bevy-inspector-egui = "0.27.0"
 bevy_editor_pls = "0.10.0"
@@ -17,6 +19,8 @@ resolver = "2"
 members = ["crates/*"]
 
 [workspace.dependencies]
+blender_plugin = { path = "crates/blender_plugin" }
+
 bevy = { version = "0.14.2", features = ["file_watcher"] }
 
 # Enable a small amount of optimization in the dev profile.
