--- a/crates/blender_plugin/Cargo.toml
+++ b/crates/blender_plugin/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "blender_plugin"
 version = "0.1.0"
+authors = ["monax-owo"]
 edition = "2021"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 bevy = { workspace = true }
